# StakePact

./: .gitignore  README.md  agentbond.md  agentrade.md  prd.md  stakepact.md
agentbond/: Anchor.toml
agentbond/app/: index.html  package.json  vite.config.ts
agentbond/app/src/: App.css  App.tsx  WalletProvider.tsx  main.tsx
agentbond/app/src/components/: AgentDashboard.tsx  OperatorDashboard.tsx
agentbond/app/src/program/: AgentBondProgram.ts
agentbond/programs/agentbond/: Cargo.toml
agentbond/programs/agentbond/src/: errors.rs  lib.rs
agentbond/tests/: agentbond.ts
agentrade/: Anchor.toml
agentrade/app/: index.html  package.json  vite.config.ts
agentrade/app/src/: App.tsx
agentrade/app/src/components/: AgentDashboard.tsx  OperatorDashboard.tsx
agentrade/app/src/program/: AgenTradeProgram.ts
agentrade/programs/agentrade/: Cargo.toml
agentrade/programs/agentrade/src/: errors.rs  lib.rs  state.rs
agentrade/tests/: agentrade.ts
oracle/: oracle.ts  package.json  tsconfig.json
skills/: colosseum-copilot
stakepact/: Anchor.toml
stakepact/app/: index.html  package.json
stakepact/app/src/: App.tsx
stakepact/app/src/components/: AgentDashboard.tsx  OperatorDashboard.tsx
stakepact/app/src/program/: StakePactProgram.ts
stakepact/programs/stakepact/: Cargo.toml
stakepact/programs/stakepact/src/: errors.rs  lib.rs  state.rs
stakepact/tests/: agentbond.ts
x402/: .env.example  client.ts  package.json  server.ts
