[package]
name = "agentrade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentrade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
pyth-solana-receiver-sdk = { version = "1.1.0" }

